[tool.poetry]
name = "lunahod"
version = "0.1.0"
description = ""
authors = ["LEv145"]
license = "MIT"
readme = "README.md"
packages = [{include = "lunohod", from = "src"}]

[tool.poetry.dependencies]
python = "^3.7"
gpiozero = "^1.6.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
