[tool.poetry]
name = "lunahod-details"
version = "0.1.2"
description = ""
authors = ["LEv145"]
license = "MIT"
readme = "README.md"
packages = [{include = "lunohod_details", from = "src"}]

[tool.poetry.dependencies]
python = "^3.9"
gpiozero = "^1.6.2"
rpi-gpio = "^0.7.1"
pigpio = "^1.78"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
